committed after deadline

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -45,7 +45,7 @@ day. In the histogram, there is no bar for days in which there are no
 values recorded.  
 
 **Note:** For convenience, the raw data is used, but with one transformation: the dates have been converted from a factor to a date.
-```{r lib_ggplot2, echo=TRUE, fig.width=10, cache=TRUE}
+```{r lib_ggplot2, echo=TRUE, fig.width=10, cache=FALSE}
 tidy2 <- transform(rawdata, date = as.Date(rawdata$date, format = "%Y-%m-%d"))
 library(ggplot2)
 ggplot(tidy2, aes(x = date)) + geom_histogram(binwidth = 1, aes(weight = steps), color = "white") + scale_x_date(breaks = "1 day", limits = c(as.Date(tidy2[which.min(tidy2[, 2]), 2]), as.Date(tidy2[which.max(tidy2[, 2]), 2]) + 1), expand = c(0 ,0)) + ylab("steps") + xlab("date") + theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 1))
@@ -109,26 +109,39 @@ This is a sample showing imputed values in `tidydata2`:
 head(sample(tidydata2, size = 12))
 ```
 
+```{r histpostimput, echo=TRUE, fig.width=10}
+ggplot(tidy2, aes(x = date)) + geom_histogram(binwidth = 1, aes(weight = steps), color = "white") + scale_x_date(breaks = "1 day", limits = c(as.Date(tidy2[which.min(tidy2[, 2]), 2]), as.Date(tidy2[which.max(tidy2[, 2]), 2]) + 1), expand = c(0 ,0)) + ylab("steps") + xlab("date") + theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 1))
+```
+
+```{r mmpostimput, echo=TRUE, results='asis'}
+mean1 <- as.data.frame(sapply(tidydata2, mean, na.rm = TRUE))
+names(mean1) <- "mean steps per day"
+median1 <- as.data.frame(sapply(tidydata2, median, na.rm = TRUE))
+names(median1) <- "median steps per day"
+mm <- cbind(mean1, median1)
+library(xtable)
+xtmean <- xtable(na.omit(mm), align = "lrr")
+print(xtmean, type = "html")
+```
 
 ## Are there differences in activity patterns between weekdays and weekends?
 
 The following code creates a new factor variable in the `tidy2` dataset with two levels -- "weekday" and "weekend" indicating whether a given date is a weekday or weekend day.
 ```{r weekday, echo=TRUE, cache=TRUE}
-tidy2$weekday <- weekdays(tidy2$date)
+tidy2$wd <- weekdays(tidy2$date)
 for(r in 1:nrow(tidy2)) {
     if(tidy2[r, 4]=="Saturday" | tidy2[r, 4]=="Sunday") { tidy2[r, 4] <- "weekend" }
     else { tidy2[r, 4] <- "weekday" }
 }
-tidy2 <- transform(tidy2, weekday = factor(weekday))
-levels(tidy2$weekday)
+tidy2 <- transform(tidy2, wd = factor(wd))
+levels(tidy2$wd)
 ```
 
 
 The following code creates a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis).
 ```{r plotbyweekday, echo=TRUE, fig.width=10}
-head(tidy2[tidy2$weekday=="weekend"])
 intervals <- as.factor(tidy2$interval)
 avgsteps2 <- tapply(tidy2$steps, tidy2$interval, mean, na.rm = TRUE)
 library(lattice)
-xyplot(avgsteps2 ~ intervals | weekday, data = tidy2, layout = c(1, 2), type = "l")
+xyplot(avgsteps2 ~ intervals | tidy2$wd, layout = c(1, 2), type = "l")
 ```
