--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,4 +1,10 @@
+---
+output:
+  html_document:
+    keep_md: yes
+---
 # Reproducible Research: Peer Assessment 1
+
 This assignment makes use of data from a personal activity monitoring device. 
 This device collects data at 5 minute intervals through out the day. The data consists of two months of data from an anonymous individual collected during 
 the months of October and November, 2012 and include the number of steps taken 
@@ -9,7 +15,7 @@ in 5 minute intervals each day.
 
 The following code downloads the zip file into a temporary file, then extracts 
 the text file and reads the data into a data frame called rawdata.
-```{r rawdata, echo=TRUE, cache=TRUE}
+```{r get_raw_data, echo=TRUE}
 url = "https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip"
 temp <- tempfile()
 download.file(url, destfile = temp, method = "curl")
@@ -18,14 +24,14 @@ unlink(temp)
 ```
 
 The raw data, stored in the data frame `rawdata`, looks like this:
-```{r showrawdata, echo=FALSE}
+```{r show_raw_data, echo=TRUE}
 head(rawdata)
 ```
 
 
-For analysis, it will be more convenient to rearrange the data as a matrix of measurments (i.e. steps) by date (as columns) and by interval (as rows).
-The data, in a format suitable for analysis, will be stored in the data frame "tidydata".
-```{r maketidy, echo=TRUE}
+For analysis, it will be more convenient to rearrange the data as a matrix of measurments (i.e. steps) by date (columns) and by interval (rows).
+The data, in a format suitable for analysis, will be stored in a data frame called tidydata.
+```{r make_tidy, echo=TRUE}
 tidysplit <- with(rawdata, split(steps, date))
 tidy1 <- sapply(tidysplit, cbind)
 tidydata <- as.data.frame(tidy1)
@@ -33,8 +39,8 @@ rownames(tidydata) <- levels(as.factor(rawdata$interval))
 ```
 
 This is a sample of tidy data, stored in the data frame `tidydata`:
-```{r tidy_dates, echo=FALSE}
-head(sample(tidydata, size = 6))
+```{r tidy_dates, echo=TRUE}
+head(tidydata[, c(4, 10, 32, 44, 52, 60)])
 ```
 
 
@@ -44,39 +50,35 @@ The following code creates a histogram of the total number of steps taken each
 day. In the histogram, there is no bar for days in which there are no 
 values recorded.  
 
-**Note:** For convenience, the raw data is used, but with one transformation: the dates have been converted from a factor to a date.
-```{r lib_ggplot2, echo=TRUE, fig.width=10, cache=FALSE}
+**Note:** The raw data is used in this calculation, but with one transformation: the dates have been converted from a factor to a date.  
+```{r hist_1, echo=TRUE, fig.width=10}
 tidy2 <- transform(rawdata, date = as.Date(rawdata$date, format = "%Y-%m-%d"))
 library(ggplot2)
-ggplot(tidy2, aes(x = date)) + geom_histogram(binwidth = 1, aes(weight = steps), color = "white") + scale_x_date(breaks = "1 day", limits = c(as.Date(tidy2[which.min(tidy2[, 2]), 2]), as.Date(tidy2[which.max(tidy2[, 2]), 2]) + 1), expand = c(0 ,0)) + ylab("steps") + xlab("date") + theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 1))
+hist_1 <- ggplot(tidy2, aes(x = date)) + geom_histogram(binwidth = 1, aes(weight = steps)) + scale_x_date(breaks = "1 day", limits = c(as.Date(tidy2[which.min(tidy2[, 2]), 2]), as.Date(tidy2[which.max(tidy2[, 2]), 2]) + 1), expand = c(0 ,0)) + ylab("total steps") + xlab("date") + theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 1))
+hist_1
 ```
 
-The following code creates a table displaying the **mean** and **median** total number of steps taken each day.  
-
-**Note:** NA values have been excluded from the computation. Days in which there were no valid measurements (i.e. only NA values) are not displayed.
-```{r mmstepsperday, echo=TRUE, results='asis'}
-mean1 <- as.data.frame(sapply(tidydata, mean, na.rm = TRUE))
-names(mean1) <- "mean steps per day"
-median1 <- as.data.frame(sapply(tidydata, median, na.rm = TRUE))
-names(median1) <- "median steps per day"
-mm <- cbind(mean1, median1)
-library(xtable)
-xtmean <- xtable(na.omit(mm), align = "lrr")
-print(xtmean, type = "html")
+The following code adds two horizontal lines intersecting the y axis at the **mean** (red solid line) and **median** (blue dotted line) total number of steps taken each day (i.e. the mean and median total number of steps taken each day, calculated across all days). **Note:** Days in which there were no valid measurements (i.e. only NA values) were excluded from these calculations.  
+```{r mean_median_1, echo=TRUE, fig.width=10}
+mean1 <- mean(colSums(tidydata, na.rm = TRUE))
+mean1
+median1 <- median(colSums(tidydata, na.rm = TRUE))
+median1
+hist_1 + geom_hline(aes(yintercept = mean1), color = "red") + geom_hline(aes(yintercept = median1), color = "#0066ff", linetype="dashed") + annotate("text", x = as.Date(names(tidydata[2]), format = "%Y-%m-%d"), y = mean1 * 0.9, label = paste("mean: ", round(mean1, 0)), color = "red", hjust=0) + annotate("text", x = as.Date(names(tidydata[2]), format = "%Y-%m-%d"), y = median1 * 1.15, label = paste("median: ", round(median1, 0)), color = "#0066ff", hjust=0)
 ```
 
 
 ## What is the average daily activity pattern?
 
 The following code generates a time series plot of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis).  
-```{r avgstepsperinterval, echo=TRUE}
+```{r avg_steps_per_interval, echo=TRUE}
 intnames <- rownames(tidydata)
 avgsteps <- tapply(rawdata$steps, rawdata$interval, mean, na.rm = TRUE)
 plot(intnames, avgsteps, type = "l", xlab = "5-minute interval", ylab = "average number of steps (across all days)")
 ```
 
-The following code identifies the name of the 5-minute interval containing the maximum average number of steps, calculated across all the days in the dataset.
-```{r maxnumsteps5minterval, echo=TRUE}
+The following code identifies the name of the 5-minute interval containing the maximum average number of steps, calculated across all the days in the dataset.  
+```{r max_num_steps_interval, echo=TRUE}
 names(which.max(avgsteps))
 ```
 
@@ -84,50 +86,54 @@ names(which.max(avgsteps))
 ## Imputing missing values
 
 The following code calculates the total number of missing values in the dataset.  
-```{r totNAs, echo=TRUE}
-stepsNA <- is.na(tidydata)
-sum(stepsNA)
+```{r tot_NAs, echo=TRUE}
+sum(is.na(tidydata))
 ```
 
-The following code creates a new version of tidy data (`tidydata2`) where NA values have been replaced with the corresponding mean number of steps for the 5-minute interval, averaged across all days.
+The following code creates new versions of `tidydata2` and `tidy2` where NA values have been replaced with the corresponding mean number of steps for the 5-minute interval, averaged across all days.  
 ```{r replaceNAs, echo=TRUE}
 tidydata2 <- tidydata
-avgstepsinterval <- as.vector(avgsteps)
-
 for(r in 1:nrow(tidydata2)) {
     for(c in 1:ncol(tidydata2)) {
         if(is.na(tidydata2[r, c])==TRUE) {
-            tidydata2[r, c] <- avgstepsinterval[r]
+            tidydata2[r, c] <- as.vector(avgsteps)[r]
         }
         else { next(c) }
     }
 }
+
+for(i in 1:length(unique(tidy2$interval))){
+    tidy2[is.na(tidy2$steps) == TRUE & tidy2$interval == levels(as.factor(tidy2$interval))[i], "steps"] <- avgsteps[[i]]
+}
+
 ```
 
-This is a sample showing imputed values in `tidydata2`:
+This is a sample showing imputed values in `tidydata2` and `tidy2`:  
 ```{r newtidy, echo=FALSE}
-head(sample(tidydata2, size = 12))
+head(tidydata2[, c(4, 10, 32, 44, 52, 60)])
+head(tidy2)
 ```
 
-```{r histpostimput, echo=TRUE, fig.width=10}
-ggplot(tidy2, aes(x = date)) + geom_histogram(binwidth = 1, aes(weight = steps), color = "white") + scale_x_date(breaks = "1 day", limits = c(as.Date(tidy2[which.min(tidy2[, 2]), 2]), as.Date(tidy2[which.max(tidy2[, 2]), 2]) + 1), expand = c(0 ,0)) + ylab("steps") + xlab("date") + theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 1))
+A new histogram of the total number of steps taken each day (including the mean and median):  
+```{r hist_2, echo=TRUE, fig.width=10}
+
+mean2 <- mean(colSums(tidydata2, na.rm = TRUE))
+mean2
+median2 <- median(colSums(tidydata2, na.rm = TRUE))
+median2
+hist_2 <- ggplot(tidy2, aes(x = date)) + geom_histogram(binwidth = 1, aes(weight = steps)) + scale_x_date(breaks = "1 day", limits = c(as.Date(tidy2[which.min(tidy2[, 2]), 2]), as.Date(tidy2[which.max(tidy2[, 2]), 2]) + 1), expand = c(0 ,0)) + ylab("total steps") + xlab("date") + theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 1)) + geom_hline(aes(yintercept = mean2), color = "red") + geom_hline(aes(yintercept = round(median2, 0)), color = "#0066ff", linetype="dashed") + annotate("text", x = as.Date(names(tidydata2[2]), format = "%Y-%m-%d"), y = mean2 * 0.9, label = paste("mean: ", round(mean2, 0)), color = "red", hjust=0) + annotate("text", x = as.Date(names(tidydata2[2]), format = "%Y-%m-%d"), y = median2 * 1.15, label = paste("median: ", round(median2, 0)), color = "#0066ff", hjust=0)
+hist_2
 ```
 
-```{r mmpostimput, echo=TRUE, results='asis'}
-mean1 <- as.data.frame(sapply(tidydata2, mean, na.rm = TRUE))
-names(mean1) <- "mean steps per day"
-median1 <- as.data.frame(sapply(tidydata2, median, na.rm = TRUE))
-names(median1) <- "median steps per day"
-mm <- cbind(mean1, median1)
-library(xtable)
-xtmean <- xtable(na.omit(mm), align = "lrr")
-print(xtmean, type = "html")
-```
+The resulting histogram and the mean and median values are clearly different after imputing missing values.  
+
+Empty bins in the histogram (i.e. days where all values were NA) had all values for all intervals replaced with mean values, increasing the frequency of "average day" instances, thus causing the mean and median lines to overlap.  
+
 
 ## Are there differences in activity patterns between weekdays and weekends?
 
-The following code creates a new factor variable in the `tidy2` dataset with two levels -- "weekday" and "weekend" indicating whether a given date is a weekday or weekend day.
-```{r weekday, echo=TRUE, cache=TRUE}
+The following code creates a new factor variable in the `tidy2` dataset with two levels -- "weekday" and "weekend" indicating whether a given date is a weekday or weekend day.  
+```{r add_weekday, echo=TRUE}
 tidy2$wd <- weekdays(tidy2$date)
 for(r in 1:nrow(tidy2)) {
     if(tidy2[r, 4]=="Saturday" | tidy2[r, 4]=="Sunday") { tidy2[r, 4] <- "weekend" }
@@ -138,10 +144,12 @@ levels(tidy2$wd)
 ```
 
 
-The following code creates a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis).
-```{r plotbyweekday, echo=TRUE, fig.width=10}
+The following code creates a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis).  
+
+(**Note:** I ran out of time and was not able to figure out why the first panel does not show a line)  
+```{r plot_by_weekday, echo=TRUE, fig.width=10}
 intervals <- as.factor(tidy2$interval)
 avgsteps2 <- tapply(tidy2$steps, tidy2$interval, mean, na.rm = TRUE)
 library(lattice)
-xyplot(avgsteps2 ~ intervals | tidy2$wd, layout = c(1, 2), type = "l")
+xyplot(avgsteps2 ~ intervals | wd, data = tidy2, xlab="5-minute intervals", ylab="Average number of steps", layout = c(1, 2), type = "l")
 ```
